aws/projects/Project-001-Roman-Numerals-Converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals.
  The application is to be coded in Python and deployed as a web application with 
  Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.


    
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection. 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80 
          ToPort: 80
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0dc2d3e4c0f9ebd18
      InstanceType: t2.micro
      KeyName: mikemi02
      SecurityGroupIds:
       - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack 
      UserData: 
        Fn::Base64: 
          !Sub |
            #! /bin/bash 
            yum update -y 
            yum install python3 -y 
            yum pip3 install flask 
            FOLDER="https://https://raw.githubusercontent.com/emine-arc/aws-workspace/main/aws/projects/Project-001-Roman-Numerals-Converter"
            cd /var/www/html
            wget $FOLDER/index.html
            wget $FOLDER/result.html
            wget $FOLDER/Project_001_.png 
            wget $FOLDER/project-001-snapshot.png
            systemctl start httpd
            systemctl enable httpd
           
Outputs: 
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}  
      - PublicAddress: !GetAtt  WebServerHost.PublicDnsName 
    Description: Roman Numerals Converter URL
